[package]
name = "rust-net-protocols"
version = "0.1.0"
authors = ["Qingluan <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.4", features = ["full"] }
colored = "1.8"
byteorder = "1.3.2"
bytes = "0.4"
futures = "0.3.1"
mio = "0.6" 
rand = "0.3"
time = "0.1"
